# podcast_verify_example

./: README.md
hosting_company/: Cargo.toml
hosting_company/src/: main.rs  view.rs
