[package]
name = "hosting_company"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.6.18", features=["macros", "headers"]}
dissolve = "0.2.2"
html-to-string-macro = "0.2.5"
pkcs8 = "0.10.2"
rand = "0.8.5"
rsa = {version="0.9.2"}
serde = {version="1.0.164", features=["derive"]}
tokio = {version="1.29", features=["rt-multi-thread", "macros"]}
url = "2.4.0"
